[tool.poetry]
name = "cipher_ltk2118"
version = "0.1.0"
description = "Python package that uses a cipher to encrypt and decrypt some stuff."
authors = ["Liam Tay Kearney"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
